ecmascript/parser/tests/test262-error-references/fail/c66507ec6e15220d.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/c66507ec6e15220d.js:1:1
  |
1 | export { default }
  | ^^^^^^

